--- a/render.yaml
+++ b/render.yaml
@@ -6,4 +6,4 @@ services:
     startCommand: "uvicorn app.main:app --host 0.0.0.0 --port 10000"
     envVars:
       - key: OPENAI_API_KEY
-        value: YOUR_OPENAI_API_KEY
+        value: 3cfbcc6bccebc65ce15bd634ed5cdc0f
